--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body{
     padding: 0.3rem;
     border: 0.1rem;
     margin: 0.4rem;
-    left: 40%;
+    left: 32.5%;
 }
 
 .usuario{
@@ -50,10 +50,10 @@ body{
     cursor: pointer;
     display: block;
     position: absolute;
-    padding: 0.5rem;
+    /*padding: 0.5rem;
     border: 0.1rem;
-    margin: 0.4rem;
-    left: 0;
+    margin: 0.4rem;*/
+    left: 2%;
 }
 
 .menuinicial{
@@ -62,10 +62,10 @@ body{
     cursor: pointer; 
     display: block;
     position: absolute;
-    padding: 0.5rem;
+    /*padding: 0.5rem;
     border: 0.1rem;
-    margin: 0.4rem;
-    left: 85.5%;  
+    margin: 0.4rem;*/
+    left: 82.5%;  
 }
 
 .formulario{
@@ -95,37 +95,6 @@ body{
 
 .textfield{
     width: 94%;
-}
-
-.menuinicial{
-    width: 3rem;
-    height: 3rem;
-    
-}
-
-
-.logo-header{
-    width: 7rem;
-    height: 5rem;
-    display: inline-block;
-    /*position: absolute; */
-    padding: 0.3rem;
-    border: 0.1rem;
-    margin: 0.4rem;
-}
-
-.container{
-    justify-content: space-between;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    /*justify-content: right;*/
-    padding: 0.5rem;
-    border: 0.1rem;
-    margin: 0.4rem;
-    border-style: solid;
-    border-width: 0.3rem;
-    border-color: #4cfbb4;
 }
 
 /*.menu-hamburguer{
@@ -168,7 +137,7 @@ body{
     border-radius: 3rem;
     background-color: #2589BD;
     top: 3.5rem;
-    left: 86.5%;
+    left: 82.5%;
 }
 
 .maiuscula{
@@ -186,7 +155,7 @@ body{
     border-radius: 1rem;
     background-color: #2589BD;
     top: 7rem;
-    left: 86.5%;
+    left: 82.5%;
 }
 
 .minuscula{
@@ -204,7 +173,7 @@ body{
     border-radius: 1rem;
     background-color: #2589BD;
     top: 10.5rem;
-    left: 86.5%;
+    left: 82.5%;
 }
 
 footer{
