--- a/style.css
+++ b/style.css
@@ -418,8 +418,8 @@ footer{
     margin: 0.4rem;
     width: 1.75rem;
     height: 1.75rem;
-    top: 119.5rem;
-    left: 75%;
+    top: 116.5rem;
+    left: 78%;
 }
 
 .instagram{
@@ -431,8 +431,8 @@ footer{
     margin: 0.4rem;
     width: 1.75rem;
     height: 1.75rem;
-    top: 122.5rem;
-    left: 75%;
+    top: 119.5rem;
+    left: 78%;
 }
 
 .twitter{
@@ -444,8 +444,8 @@ footer{
     margin: 0.4rem;
     width: 1.75rem;
     height: 1.75rem;
-    top: 125.5rem;
-    left: 75%;
+    top: 122.5rem;
+    left: 78%;
 }
 
 .linkedin{
@@ -457,8 +457,8 @@ footer{
     margin: 0.4rem;
     width: 1.75rem;
     height: 1.75rem;
-    top: 128.5rem;
-    left: 75%;
+    top: 125.5rem;
+    left: 78%;
 }
 
 .email{
@@ -470,15 +470,15 @@ footer{
     margin: 0.4rem;
     width: 1.75rem;
     height: 1.75rem;
-    top: 131.5rem;
-    left: 75%;
+    top: 128.5rem;
+    left: 78%;
 }
 
 .botao-footer{
     display: flex;
     flex-direction: column;
     position: relative;
-    top: 115rem;
+    top: -1rem;
 }
 
 .botao-voltar{
@@ -487,12 +487,12 @@ footer{
     font-size: 1.1rem;
     font-weight: bolder;
     border-radius: 1.5rem;
-    width: 17rem;
+    width: 18rem;
     height: 2.5rem;
     display: block;
     position: absolute;
-    top: 117rem;
-    left: 7%;
+    /*top: 117rem;*/
+    left: 11%;
 }
 
 .botao-voltar:hover{
