--- a/style.css
+++ b/style.css
@@ -545,5 +545,40 @@ footer{
     background-color: green;
 }
 
+.formulario{
+    background-color: #187795;
+    margin: 2rem;
+    padding: 1rem;
+    width: 73%;
+    border-radius: 22px;
+    border-style: solid;
+    border-color: #642C93;
+    border-width: 4px;
+    box-shadow: -7px 1px 32px 1px #642C93;
+}
+
+.formulario input{
+    border-radius: 59;
+    margin: 0.5rem;
+    display: flex;
+}
+
+.formulario label{
+    padding-left: 9px;
+}
+
+.formulario textarea{
+    display: flex;
+    margin: 8px;
+    height: 115px;
+}
+
+.emailcontato{
+    text-align: center;
+    margin: 13%;
+    
+}
+
+
 
 }
