--- a/style.css
+++ b/style.css
@@ -185,7 +185,9 @@ body{
     background-color: #187795;
     margin: 2rem;
     padding: 1rem;
-    width: 73%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     border-radius: 22px;
     border-style: solid;
     border-color: #642C93;
@@ -193,10 +195,11 @@ body{
     box-shadow: -7px 1px 32px 1px #642C93;
 }
 
+
+
 .formulario input{
     border-radius: 59;
     margin: 0.5rem;
-    display: flex;
 }
 
 .formulario label{
@@ -224,14 +227,14 @@ body{
 }
 
 .textfield{
-    width: 83%;
+    width: 87%;
     height: 2.25rem;
     border-radius: 20px;
     border-style: solid;
     border-width: 2px;
     border-color: #642C93;
-    padding-left: 14px;
-    padding-right: 14px;
+    padding-left: 0.875rem;
+    padding-right: 0.875rem;
 }
 
 .textfield:focus{
