--- a/style.css
+++ b/style.css
@@ -299,9 +299,9 @@ body{
 .botao-video{
     position: relative;
     left: 35%;
-    padding: 8px;
+    padding: 0.5rem;
     margin-top: 20px;
-    border-radius: 22px;
+    border-radius: 1.5rem;
     border-color: #642C93;
     border-style: solid;
     border-width: 2px;
@@ -363,6 +363,13 @@ body{
     position: absolute;
     top: 12.5rem;
     left: 55%;
+}
+
+.frase-final{
+    color:#642C93;
+    text-align: center;
+    font-weight: bold;
+    padding: 2rem;
 }
 
 footer{
