--- a/style.css
+++ b/style.css
@@ -166,13 +166,13 @@ body{
 }
 
 .texto-principal{
-    margin: 2rem;
+    margin: 1rem;
     padding: 2rem;
     border-color: blue;
     border-style: solid;
     border-width: 4px;
     /* padding-top: 0rem; */
-    margin-top: 9rem;
+    margin-top: 5rem;
     font-weight: bold;
     color: #642C93;
 }
@@ -181,7 +181,11 @@ body{
     color:#642C93;
     text-align: center;
     font-weight: bold;
-    padding: 2rem;
+    padding: 3rem;
+    font-size: 1.2rem;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0.5rem;
 }
 
 .formulario{
@@ -296,16 +300,19 @@ body{
     color:#4cfbb4 ;
 }
 
+.video{
+    padding: 1.5rem;
+    
+}
+
 .botao-video{
     position: relative;
-    left: 35%;
+    left: 24%;
     padding: 0.5rem;
-    margin-top: 20px;
     border-radius: 1.5rem;
     border-color: #642C93;
     border-style: solid;
     border-width: 2px;
-    width: 86px;
     background-color: #4cfbb4;
     cursor: pointer;
 }
@@ -316,9 +323,9 @@ body{
 }
 
 .frase4{
-    padding: 2rem;
+    padding: 3rem;
     text-align: center;
-    font-size: 22px;
+    font-size: 1.2rem;
 }
 
 .container-celular{
@@ -366,10 +373,23 @@ body{
 }
 
 .frase-final{
-    color:#642C93;
+    /*border: none;
+    padding: 5rem;*/
+    display: flex;
+    flex-direction: column-reverse;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+
+.frase-final section{
+    display: block;
+    position: absolute;
+    padding: 3rem;
+    padding-bottom: 10rem;
     text-align: center;
     font-weight: bold;
-    padding: 2rem;
+    font-size: 1.2rem;
 }
 
 footer{
